--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -3,18 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".features.movie.presentation.ui.MainActivity">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/pokemon_container"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+    <EditText
+        android:id="@+id/edit_1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
+        android:hint="Busqueda"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/movie_container"
+        android:name="edu.example.amv_movies_app.features.movie.presentation.ui.MovieListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_1"
         app:navGraph="@navigation/nav_graph_movie" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
