--- a/app/src/main/res/navigation/nav_graph_movie.xml
+++ b/app/src/main/res/navigation/nav_graph_movie.xml
@@ -2,22 +2,22 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph_movie"
-    app:startDestination="@layout/view_movie_item">
+    android:id="@+id/nav_graph"
+   app:startDestination="@id/movie_list_fragment">
 
     <fragment
-        android:id="@+id/fragment_movie_list"
+        android:id="@+id/movie_list_fragment"
         android:name="edu.example.amv_movies_app.features.movie.presentation.ui.MovieListFragment"
         tools:layout="@layout/fragment_movie_list">
         <action
-            android:id="@+id/fragment_movie_list_to_fragment_movie_detail"
-            app:destination="@id/fragment_movie_detail"/>
+            android:id="@+id/action_from_movie_list_to_movie_detail"
+            app:destination="@id/movie_detail_fragment"/>
 
     </fragment>
     <fragment
-        android:id="@+id/fragment_movie_detail"
+        android:id="@+id/movie_detail_fragment"
         android:name="edu.example.amv_movies_app.features.movie.presentation.ui.MovieDetailFragment"
-        tools:layout="@layout/fragment_movie_detail">
+        tools:layout="@layout/view_movie_item">
         <argument
             android:name="id"
             app:argType="string"
